[workspace]
resolver = "2"
members = [
    "services/coordinator",
    "programs/bw-recorder"
    ]

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[workspace.dependencies]
anchor-lang = "0.30.1"
solana-program = "1.18.26"
solana-sdk = "1.18.26"
solana-program-test = "1.18.26"
solana-banks-interface = "1.18.26"
solana-logger = "1.18.26"

actix-web = "^4"
dotenv = "^0.15.0"
serde = "1.0"
bytemuck = "1.4.0"