[workspace]
resolver = "2"
members = [
    "services/coordinator",
    "services/rollup",
    "programs/bw-recorder"
    ]

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[workspace.dependencies]
anchor-lang = "0.30.1"
solana-program = "1.18.26"
solana-sdk = "1.18.26"
solana-program-test = "1.18.26"
solana-banks-interface = "1.18.26"
solana-logger = "1.18.26"

actix-web = "^4"
async-trait = "^0.1.52"
bytemuck = "1.4.0"
chrono = "^0.4"
derive_more = "^0.99"
display_json = "0.2.1"
dotenv = "^0.15.0"
job_scheduler = "1.2.1"
tokio = "^1"
tracing = "0.1.36"
tracing-actix-web = "0.6.0"
tracing-appender = "0.2.2"
tracing-futures = "0.2.5"
tracing-subscriber = {version = "0.3.15", features = ["env-filter"]}
tracing-bunyan-formatter = "0.3.3"
tracing-log = "0.1.3"
tracing-stackdriver = "0.6.1"
serde = "1.0"
serde_json = "^1.0"
