[package]
name = "coordinator"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = {workspace = true}
async-trait = {workspace = true}
derive_more = {workspace = true}
display_json = {workspace = true}
dotenv = { workspace = true }
tokio = { workspace = true, features = ["fs", "macros"] }
tracing = { workspace = true }
tracing-actix-web = { workspace = true }
tracing-appender = { workspace = true }
tracing-futures = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"]}
tracing-bunyan-formatter = { workspace = true }
tracing-log = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = {workspace = true}
